apps/networking/unifi/controller/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  labels:
    app: unifi-controller
  annotations:
    link.argocd.argoproj.io/external-link: https://unifi.chalk-ho.me
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: unifi-controller
          image: jacobalberty/unifi:v7.4.162
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8443
              name: web-https
              protocol: TCP
            - containerPort: 8080
              name: devices
              protocol: TCP
            - containerPort: 8843
              name: guest-https
              protocol: TCP
            - containerPort: 8880
              name: guest-http
              protocol: TCP
            - containerPort: 6789
              name: mobile-test
              protocol: TCP
            - containerPort: 3478
              name: stun
              protocol: UDP
            - containerPort: 10001
              name: discovery
              protocol: UDP
            - containerPort: 1900
              name: ddiscoveryl2
              protocol: UDP
            - containerPort: 5514
              name: syslog
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /unifi/data
            - name: logs
              mountPath: /unifi/log
            - mountPath: /unifi/data/sites
              name: config
          resources:
            limits:
              cpu: 450m
              memory: 1500Mi
            requests:
              cpu: 200m
              memory: 1024Mi
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 45
            periodSeconds: 25
          startupProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-storage
        - name: logs
          emptyDir: {}
        - name: temp-secrets
          secret:
            secretName: unifi-tls
        - name: certs
          emptyDir: {}
        - name: config
          configMap:
            name: unifi-controller-cm
            items:
              - key: gateway.config.json
                path: gateway.config.json
