apps/networking/unifi/controller/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-svc
  labels:
    app: unifi-controller
spec:
  ports:
  - port: 80
    targetPort: 8443
    name: web-https
    protocol: TCP
  - port: 8080
    name: devices
    protocol: TCP
  - port: 8843
    name: guest-https
    protocol: TCP
  - port: 8880
    name: guest-http
    protocol: TCP
  - port: 6789
    name: mobile-test
    protocol: TCP
  - port: 3478
    name: stun
    protocol: UDP
  - port: 10001
    name: discovery
    protocol: UDP
  - port: 1900
    name: discoveryl2
    protocol: UDP
  - port: 5514
    name: syslog
    protocol: UDP
  selector:
    app: unifi-controller
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-nodeports
  labels:
    app: unifi-controller
spec:
  selector:
    app: unifi-controller
  ports:
  - port: 8443
    nodePort: 32321
    protocol: TCP
    name: web-https
  - port: 8080
    nodePort: 32322
    protocol: TCP
    name: devices
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  labels:
    app: unifi-controller
  annotations:
    kube-vip.io/vipHost: unifi
spec:
  selector:
    app: unifi-controller
  ports:
  - name: web-https
    port: 80
    targetPort: 8443
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: "10.0.7.141"
  loadBalancerClass: kube-vip.io/kube-vip-class
